--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,30 @@
 <html>
+    <head>
+        <title>
+            Article One | Sourabh Gupta
+        </title>
+        </head>
+        <body>
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article one
+            </h3>
+            <div>
+                Feb 3, 2017
+            </div>
+            <div>
+                <p>
+                    this is my content for the first article.this is my content for the first article.this is my content for the first article.this is my content for the first article.
+                </p>
+                <p>
+                    this is my content for the first article.this is my content for the first article.this is my content for the first article.this is my content for the first article.
+                </p>
+                <p>
+                    this is my content for the first article.this is my content for the first article.this is my content for the first article.this is my content for the first article.
+                </p>
+            </div>
+        </body>
 </html>
