--- a/ui/index.html
+++ b/ui/index.html
@@ -4,16 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="E:\IMG_20160616_192650_HDR (3).jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am saurabh and this is my first webapp.
+        <h3>Personal</h3>
+        <div>
+            Hi, My name is Saurabh Gupta.
         </div>
-        <script>
-            alert('Hi,I\'m javascript');
-        </script>
+        <hr/>
+        <h3>Professional</h3>
+        <div>I work at Hasura</div>
+            
+        <hr/>
+        <div class="Footer">
+        </div>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
