--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
         <div class="center">
-            <img id="madi" src="E:/IMG_20160616_192650_HDR (3).jpg" class="img-medium"/>
+            <img id="madi" src="img/IMG_20160616_192650_HDR (3).jpg" class="img-medium"/>
         </div>
         <hr/>
         <br>
