--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
         <div class="center">
-            <img id="madi" src="E:\IMG_20160616_192650_HDR (3).jpg" class="img-medium"/>
+            <img id="madi" src="http://4.bp.blogspot.com/-vQadba710L4/VlFwZpcdX8I/AAAAAAAACj4/TPobUzyeShM/s1600/0a855a358c9a6dfcc04388a5e574ca7d.jpg" class="img-medium"/>
         </div>
         <hr/>
         <br>
@@ -21,7 +21,7 @@
         <hr/>
         <div class="Footer">
         </div>
-        </div>
+        </div
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
