--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
         <div class="Footer">
             This button <button id="counter">Click me!</button>has been clicked<span id="count"> 0 </span>times.
         </div>
-        </div
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
